# origami_visual_servo

./: README.md
origami_data_logging/: setup.py
origami_data_logging/scripts/: plot_shape_grow_sim.m
origami_eye_in_hand/: setup.py
origami_eye_in_hand/launch/: origami_eye_in_hand_launch.py
origami_eye_in_hand/origami_eye_in_hand/: velocity_controller.py
origami_eye_in_hand/scripts/: origami_eih_exp.sh
origami_hardware/: README.md
origami_hardware/resources/: 80-20_slider.x_t  lizard_simc_v1.ino
origami_hardware/resources/end_plate/: origami_end_plate.x_t  origami_end_plate_with_camera_mount.x_t
origami_hardware/resources/motor_checker/: motor_checker.ino
resources/data_examples/259 pos 5/: camera_interaction_matrix.csv  end_flag.csv  marker_coordinates.csv  marker_coordinates_image_errors.csv  marker_coordinates_image_errors_norm.csv  marker_desired_coordinates.csv  motor_desired_velocities.csv  robot_jacobian.csv  tendon_lengths.csv  xz_cam_desired_velocity.csv  xz_cam_desired_velocity_norm.csv
resources/module_motor_control_v2/: module_motor_control_v2.ino
ros2_ws/origami_data_logging/: package.xml
ros2_ws/origami_data_logging/origami_data_logging/: image_to_video_converter.py  marker_detector.py
ros2_ws/origami_data_logging/scripts/: origami_eih_bag_to_csv.sh
ros2_ws/origami_eye_in_hand/: package.xml
ros2_ws/origami_eye_in_hand/origami_eye_in_hand/: single_module_Jacobian
ros2_ws/origami_eye_in_hand_interfaces/: CMakeLists.txt
ros2_ws/origami_eye_in_hand_interfaces/msg/: PointArray.msg
ros2_ws/origami_msgs/: setup.py
(+17 files in other folders)
