<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>origami_eye_in_hand</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jshaughnessy@wpi.edu">jenny</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_py</depend>

  <exec_depend>origami_eye_in_hand_interfaces</exec_depend>
  <exec_depend>origami_data_logging</exec_depend>
  <exec_depend>origami_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
